samples/_failures_safe/1761142675_e93d9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_af3f62d0.c: In function ‘print_token’:
./samples/SAFE/__tmp_af3f62d0.c:169:33: error: missing terminating " character
  169 |         "NUMBER", "IDENTIFIER", "OPERATOR
      |                                 ^~~~~~~~~
./samples/SAFE/__tmp_af3f62d0.c:169:9: error: expected expression at end of input
  169 |         "NUMBER", "IDENTIFIER", "OPERATOR
      |         ^~~~~~~~
./samples/SAFE/__tmp_af3f62d0.c:169:9: error: expected declaration or statement at end of input
